--- a/mainpage.html
+++ b/mainpage.html
@@ -2,11 +2,19 @@
 <html>
     <head>
         <title>Holyland</title>
+        <link rel="stylesheet" href="style.css" />
+        <!--<style>
+            h1 {font-size: 60px;}
+        </style>-->
     </head>
 
     <body>
+        <!--<h1 style="font-size: 40px">A brilliant manga about purpose and finding a place where you belong</h1>-->
         <h1>A brilliant manga about purpose and finding a place where you belong</h1>
         <hr/>
-        <p>Holyland is a manga about a young student who wanders the gang-ridden streets of Japan because he feels like he has no place at home or school. This story is not just filled with detailed action, but also with beautiful character writing as well as interesting insight from the author's own experiences!</p>
+        <!--This is a comment-->
+        <p id="orangeparagraph">Holyland is a manga about a young student who wanders the gang-ridden streets of Japan because he feels like he has no place at home or school. This story is not just filled with detailed action, but also with beautiful character writing as well as interesting insight from the author's own experiences!</p>
+        <img src="images/holyland-main-img.jpeg" height="500"/>
+        <a href="https://www.google.com">Link to Google</a>
     </body>
 </html>
