Added new pages as well as website navigation and css styling

--- a/manga.html
+++ b/manga.html
@@ -1,11 +1,8 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
     <head>
-        <title>Holyland</title>
-        <link rel="stylesheet" href="style.css" />
-        <!--<style>
-            h1 {font-size: 60px;}
-        </style>-->
+        <title>More manga</title>
+        <link rel="stylesheet" href="style.css"/>
         <!--Embed link for Bebas Neue font-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,12 +20,5 @@
                 <li><a href="contact.html">Contact us</a></li>
             </ul>
         </nav>
-        <!--<h1 style="font-size: 40px">A brilliant manga about purpose and finding a place where you belong</h1>-->
-        <h1>A brilliant manga about purpose and finding a place where you belong</h1>
-        <hr/>
-        <!--This is a comment-->
-        <p id="orangeparagraph">Holyland is a manga about a young student who wanders the gang-ridden streets of Japan because he feels like he has no place at home or school. This story is not just filled with detailed action, but also with beautiful character writing as well as interesting insight from the author's own experiences!</p>
-        <img src="images/holyland-main-img.jpeg" height="500"/>
-        <a href="https://www.google.com">Link to Google</a>
     </body>
 </html>
