Organised html and css into sections with divs and classes, modified css

--- a/gallery.html
+++ b/gallery.html
@@ -10,15 +10,21 @@
     </head>
 
     <body>
+        <!--Navigation section-->
         <!--The course has a Tours page, but I replaced it with a Manga page to access other Mangas because that would coincide with the theming of this website-->
-        <nav>
-            <ul>
-                <li><a href="mainpage.html">Home    </a></li>
-                <li><a href="manga.html">Manga  </a></li>
-                <li><a href="gallery.html">Gallery  </a></li>
-                <li><a href="about.html">About us   </a></li>
-                <li><a href="contact.html">Contact us</a></li>
-            </ul>
-        </nav>
+        <div class="nav-container">
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="mainpage.html">Home    </a></li>
+                    <li><a href="manga.html">Manga  </a></li>
+                    <li><a href="gallery.html">Gallery  </a></li>
+                    <li><a href="about.html">About us   </a></li>
+                    <li><a href="contact.html">Contact us</a></li>
+                </ul>
+            </nav>
+        </div>
+
+        <!--Gallery section-->
+        <div class="gallery"></div>
     </body>
 </html>
