--- a/mainpage.html
+++ b/mainpage.html
@@ -13,22 +13,33 @@
     </head>
 
     <body>
+        <!--Navigation section-->
         <!--The course has a Tours page, but I replaced it with a Manga page to access other Mangas because that would coincide with the theming of this website-->
-        <nav>
-            <ul>
-                <li><a href="mainpage.html">Home    </a></li>
-                <li><a href="manga.html">Manga  </a></li>
-                <li><a href="gallery.html">Gallery  </a></li>
-                <li><a href="about.html">About us   </a></li>
-                <li><a href="contact.html">Contact us</a></li>
-            </ul>
-        </nav>
+        <div class="nav-container">
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="mainpage.html">Home    </a></li>
+                    <li><a href="manga.html">Manga  </a></li>
+                    <li><a href="gallery.html">Gallery  </a></li>
+                    <li><a href="about.html">About us   </a></li>
+                    <li><a href="contact.html">Contact us</a></li>
+                </ul>
+            </nav>
+        </div>
+
+        <!--Header section-->
         <!--<h1 style="font-size: 40px">A brilliant manga about purpose and finding a place where you belong</h1>-->
-        <h1>A brilliant manga about purpose and finding a place where you belong</h1>
+        <div class="header">
+            <h1>Holyland: A masterful manga by Kouji Mori</h1>
+            <p class="subtitle">A manga about finding your purpose in life and a place where you can belong</p>
+        </div>
         <hr/>
-        <!--This is a comment-->
-        <p id="orangeparagraph">Holyland is a manga about a young student who wanders the gang-ridden streets of Japan because he feels like he has no place at home or school. This story is not just filled with detailed action, but also with beautiful character writing as well as interesting insight from the author's own experiences!</p>
-        <img src="images/holyland-main-img.jpeg" height="500"/>
-        <a href="https://www.google.com">Link to Google</a>
+        
+        <!--Main section-->
+        <div class="main-content">
+            <p id="orangeparagraph">Holyland is a manga about a young student who wanders the gang-ridden streets of Japan because he feels like he has no place at home or school. This story is not just filled with detailed action, but also with beautiful character writing as well as interesting insight from the author's own experiences!</p>
+            <img src="images/holyland-main-img.jpeg" height="500"/>
+            <a href="https://www.google.com">Link to Google</a>
+        </div>
     </body>
 </html>
