Finished main page & footer, added semantic elements for structure, updated CSS, started About Us page

--- a/mainpage.html
+++ b/mainpage.html
@@ -29,17 +29,32 @@
 
         <!--Header section-->
         <!--<h1 style="font-size: 40px">A brilliant manga about purpose and finding a place where you belong</h1>-->
-        <div class="header">
+        <header>
             <h1>Holyland: A masterful manga by Kouji Mori</h1>
             <p class="subtitle">A manga about finding your purpose in life and a place where you can belong</p>
-        </div>
-        <hr/>
+            <button>Start Reading</button>
+        </header>
+        
         
         <!--Main section-->
-        <div class="main-content">
-            <p id="orangeparagraph">Holyland is a manga about a young student who wanders the gang-ridden streets of Japan because he feels like he has no place at home or school. This story is not just filled with detailed action, but also with beautiful character writing as well as interesting insight from the author's own experiences!</p>
+        <section class="main-content">
+            <h2>What is Holyland?</h2>
+            <p id="orangeparagraph">Holyland is a manga about Yuu Kamishiro, a young student who wanders the gang-ridden streets of Japan because he feels like he has no place at home or school. This psychological thriller is not just filled with detailed action, but also with beautiful character writing as well as interesting insight from the author's own experiences!</p>
             <img src="images/holyland-main-img.jpeg" height="500"/>
-            <a href="https://www.google.com">Link to Google</a>
-        </div>
+        </section>
+
+        <!--Footer section-->
+        <footer>
+            <!--Copyright info-->
+            <p id="copyright-info">&copy; 2024 Hakusensha Co., Ltd. All rights reserved.</p>
+            <!--Navigation section-->
+            <ul class="footer-links">
+                <li><a href="mainpage.html">Home    </a></li>
+                <li><a href="manga.html">Manga  </a></li>
+                <li><a href="gallery.html">Gallery  </a></li>
+                <li><a href="about.html">About us   </a></li>
+                <li><a href="contact.html">Contact us</a></li>
+            </ul>
+        </footer>
     </body>
 </html>
