--- a/about.html
+++ b/about.html
@@ -26,5 +26,22 @@
 
         <!--About Us section-->
         <div class="about-us-section"></div>
+
+        <!--Call To Action section-->
+        <div class="call-to-action-container"></div>
+
+        <!--Footer section-->
+        <footer>
+            <!--Copyright info-->
+            <p id="copyright-info">&copy; 2024 Hakusensha Co., Ltd. All rights reserved.</p>
+            <!--Navigation section-->
+            <ul class="footer-links">
+                <li><a href="mainpage.html">Home    </a></li>
+                <li><a href="manga.html">Manga  </a></li>
+                <li><a href="gallery.html">Gallery  </a></li>
+                <li><a href="about.html">About us   </a></li>
+                <li><a href="contact.html">Contact us</a></li>
+            </ul>
+        </footer>
     </body>
 </html>
