--- a/gallery.html
+++ b/gallery.html
@@ -26,5 +26,19 @@
 
         <!--Gallery section-->
         <div class="gallery"></div>
+
+        <!--Footer section-->
+        <footer>
+            <!--Copyright info-->
+            <p id="copyright-info">&copy; 2024 Hakusensha Co., Ltd. All rights reserved.</p>
+            <!--Navigation section-->
+            <ul class="footer-links">
+                <li><a href="mainpage.html">Home    </a></li>
+                <li><a href="manga.html">Manga  </a></li>
+                <li><a href="gallery.html">Gallery  </a></li>
+                <li><a href="about.html">About us   </a></li>
+                <li><a href="contact.html">Contact us</a></li>
+            </ul>
+        </footer>
     </body>
 </html>
