Finished About Us page - two column display with flexbox CSS styling & responsive display with media query

--- a/about.html
+++ b/about.html
@@ -25,10 +25,40 @@
         </div>
 
         <!--About Us section-->
-        <div class="about-us-section"></div>
+        <div class="two-column-about-us-section">
+            <div class="column">
+                <img src="images/holyland-vol-1-cover.png" alt="Front cover for tankobon volume 1 of Holyland"/>
+            </div>
+            <div class="column">
+                <section class="about-section">
+                    <h2>About Us - Hakusensha</h2>
+                    <p>Hakusensha Co., Ltd is a publishing company based in Japan. Ever since 
+                        it was established in 1973, Hakusensha has been providing boys and girls 
+                        with dreams and inspiration through our publications centered on manga 
+                        comics and conveying the enjoyment of reading with each turn of the page.
+                    </p>
+                    <br>
+                    <p>Having launched such magazines as Hana to Yume (1974), LaLa (1976), and 
+                        Young Animal (1992), we have constantly aimed to convey fascinating things 
+                        by creating numerous appealing works in collaboration with our highly 
+                        individualistic group of authors in not only the world of girls&apos; 
+                        comics but also the fields of boys&apos; comics and picture books.
+                    </p>
+                    <br>
+                    <p>Kouji Mori, who took over the role of artist and author of the ongoing 
+                        Berserk manga in June 2022 after Kentaro Miura unfortunately passed away 
+                        in 2021, wrote and drew Holyland from October 2000 to May 2008. Holyland was 
+                        published in the Young Animals magazine.
+                    </p>
+                </section>
+            </div>
+        </div>
 
         <!--Call To Action section-->
-        <div class="call-to-action-container"></div>
+        <section class="call-to-action">
+            <h2>Find Your Own Holyland</h2>
+            <button>Read Now!</button>
+        </section>
 
         <!--Footer section-->
         <footer>
