--- a/mainpage.html
+++ b/mainpage.html
@@ -39,7 +39,10 @@
         <!--Main section-->
         <section class="main-content">
             <h2>What is Holyland?</h2>
-            <p id="orangeparagraph">Holyland is a manga about Yuu Kamishiro, a young student who wanders the gang-ridden streets of Japan because he feels like he has no place at home or school. This psychological thriller is not just filled with detailed action, but also with beautiful character writing as well as interesting insight from the author's own experiences!</p>
+            <p id="orangeparagraph">Holyland is a manga about Yuu Kamishiro, a young student who wanders the 
+                gang-ridden streets of Japan because he feels like he has no place at home or school. This 
+                psychological thriller is not just filled with blood pumping, grounded martial arts action, 
+                but also with beautiful character writing as well as interesting insight from the author's own experiences!</p>
             <img src="images/holyland-main-img.jpeg" height="500"/>
         </section>
 
