Finished Contact page - complete form with different input types, responsive css validation styles for clear user feedback

--- a/manga.html
+++ b/manga.html
@@ -30,6 +30,8 @@
         <footer>
             <!--Copyright info-->
             <p id="copyright-info">&copy; 2024 Hakusensha Co., Ltd. All rights reserved.</p>
+            <!--Disclaimer in case the actual Hakusensha company comes after me lol-->
+            <p>Disclaimer: This is a fanmade website, I am not affiliated with Hakusensha Co.,Ltd.</p>
             <!--Navigation section-->
             <ul class="footer-links">
                 <li><a href="mainpage.html">Home    </a></li>
