--- a/contact.html
+++ b/contact.html
@@ -24,13 +24,61 @@
             </nav>
         </div>
 
+        <!--Header section-->
+        <header class="contact-header">
+            <h1>Contact Us</h1>
+        </header>
+
+        <!--Contact info-->
+        <section>
+            <p>Hakusensha Co.,Ltd. Contact info would go here</p>
+        </section>
+
         <!--Contact Us section-->
-        <div class="contact-us-section"></div>
+        <main class="contact-container">
+            <h2>Send us inquiries through this form</h2>
+            <form id="contact-form" action="#" method="post">
+                <div class="form-group">
+                    <label for="name">Full Name:</label>
+                    <input type="text" id="name" name="name" required minlength="2">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email Address:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="phone">Phone Number:</label>
+                    <input type="tel" id="phone" name="phone" pattern="[0-9]{10}">
+                </div>
+                <div class="form-group">
+                    <label for="subject">Subject:</label>
+                    <select id="subject" name="subject" required>
+                        <option value="">Please select a subject</option>
+                        <option value="general">General Inquiry</option>
+                        <option value="support">Technical Support</option>
+                        <option value="billing">Billing Question</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" rows="5" required minlength="10"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="newsletter">
+                        <input type="checkbox" id="newsletter" name="newsletter">
+                        Subscribe to our newsletter
+                    </label>
+                </div>
+                <button type="submit">Send Message</button>
+            </form>
+        </main>
 
         <!--Footer section-->
         <footer>
             <!--Copyright info-->
             <p id="copyright-info">&copy; 2024 Hakusensha Co., Ltd. All rights reserved.</p>
+            <!--Disclaimer in case the actual Hakusensha company comes after me lol-->
+            <p>Disclaimer: This is a fanmade website, I am not affiliated with Hakusensha Co.,Ltd.</p>
             <!--Navigation section-->
             <ul class="footer-links">
                 <li><a href="mainpage.html">Home    </a></li>
