Added all images recquired for whole website. Added gallery function. Site elements dynamically change to fit screen size

--- a/gallery.html
+++ b/gallery.html
@@ -25,7 +25,40 @@
         </div>
 
         <!--Gallery section-->
-        <div class="gallery"></div>
+        <div id="gallery-container">
+            <h2>Holyland Gallery</h2>
+            <section id="galler-images">
+                <figure>
+                    <img src="images/holyland-promo-1.jpg" alt="The first page of chapter 1 of Holyland" title="Holyland chapter 1 first page"/>
+                    <figcaption>The first page of chapter 1 of Holyland</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/holyland-promo-2.jpg" alt="Dynamic art of Holyland's main character punching an enemy" title="Holyland's main character Yuu punching an enemy"/>
+                    <figcaption>Dynamic art of Holyland's main character punching an enemy</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/holyland-promo-3.jpg" alt="More dynamic action" title="More dynamic action"/>
+                    <figcaption>More dynamic action</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/holyland-promo-4.jpg" alt="Smear lines in the art create a sense of speed and force" title="Smear lines in the art create a sense of speed and force"/>
+                    <figcaption>Smear lines in the art create a sense of speed and force</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/holyland-promo-5.jpg" alt="Holyland often breaks down real life fighting techniques" title="Holyland often breaks down real life fighting techniques"/>
+                    <figcaption>Holyland often breaks down real life fighting techniques</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/holyland-promo-6.jpg" alt="An amazingly well drawn volume cover" title="An amazingly well drawn volume cover"/>
+                    <figcaption>An amazingly well drawn volume cover</figcaption>
+                </figure>
+            </section>
+        </div>
 
         <!--Footer section-->
         <footer>
