Fixed typo to make all images in Gallery display correctly. Adjusted styling for h2 and figcaption.

--- a/gallery.html
+++ b/gallery.html
@@ -27,7 +27,7 @@
         <!--Gallery section-->
         <div id="gallery-container">
             <h2>Holyland Gallery</h2>
-            <section id="galler-images">
+            <section id="gallery-images">
                 <figure>
                     <img src="images/holyland-promo-1.jpg" alt="The first page of chapter 1 of Holyland" title="Holyland chapter 1 first page"/>
                     <figcaption>The first page of chapter 1 of Holyland</figcaption>
@@ -44,7 +44,7 @@
                 </figure>
 
                 <figure>
-                    <img src="images/holyland-promo-4.jpg" alt="Smear lines in the art create a sense of speed and force" title="Smear lines in the art create a sense of speed and force"/>
+                    <img src="images/holyland-promo-4.png" alt="Smear lines in the art create a sense of speed and force" title="Smear lines in the art create a sense of speed and force"/>
                     <figcaption>Smear lines in the art create a sense of speed and force</figcaption>
                 </figure>
 
