Finished Manga page - 3 sections in a column with similar stylings. Each section has image on one side, text and button on other side

--- a/manga.html
+++ b/manga.html
@@ -25,6 +25,67 @@
         </div>
 
         <!--Manga section-->
+        <div id="manga-container">
+            <h2>Check Out Holyland!</h2>
+            
+            <section class="manga">
+                <div class="manga-img">
+                    <img src="images/holyland-vol-1-cover.png"/>
+                </div>
+                <div class="manga-description">
+                    <h2>Holyland</h2>
+                    <p>Yuu is a high school kid who doesn't really fit anywhere. To find a place he can belong, 
+                        be accepted, he will do anything. However one thing leads to another and he is forced to 
+                        fight to keep his place, his holyland.
+                    </p>
+                </div>
+                <div class="manga-button-container">
+                    <button class="manga-button">Buy Now!!</button>
+                </div>
+            </section>
+
+            <h2>Check Out These Other Manga if you liked Holyland!</h2>
+
+            <section class="manga">
+                <div class="manga-img">
+                    <img src="images/teppu-vol-1-cover.jpg"/>
+                </div>
+                <div class="manga-description">
+                    <h2>Teppu</h2>
+                    <p>First-year high school student Natsuo Ishido has always been a gifted athlete, and her 
+                        ability to easily master every sport has not only bought her a life of boredom, but the 
+                        resentment of everyone else who has had to work hard for their achievements. Not that 
+                        Natsuo cares what anyone else thinks. All she longs for is a break from the monotony...
+                        for a real challenge worthy of pouring all her efforts into. A rival - an equal-worth 
+                        beating down and demoralizing… That all seems like a pipe dream until a pair of annoyingly 
+                        peppy transfer students arrive from Brazil and start up a brand-new club that teases the 
+                        challenge she craves - Mixed Martial Arts.
+                    </p>
+                </div>
+                <div class="manga-button-container">
+                    <button class="manga-button">Buy Now!!</button>
+                </div>
+            </section>
+
+            <section class="manga">
+                <div class="manga-img">
+                    <img src="images/dragonball-vol-1-cover.jpg"/>
+                </div>
+                <div class="manga-description">
+                    <h2>Dragon Ball</h2>
+                    <p>Dragon Ball introduces a young monkey-tailed boy named Goku (a wry update of the classic 
+                        Chinese "Monkey King" legend), whose quiet life changes when he meets a girl named Bulma 
+                        who is on a quest to collect seven "Dragon Balls." If she gathers them all, an incredibly 
+                        powerful dragon will appear and grant her one wish. But the precious orbs are scattered 
+                        all over the world, and Bulma could use the help of a certain super-strong boy... (In 
+                        Japan, Dragon Ball and Dragon Ball Z were originally a single 42-volume series).
+                    </p>
+                </div>
+                <div class="manga-button-container">
+                    <button class="manga-button">Buy Now!!</button>
+                </div>
+            </section>
+        </div>
 
         <!--Footer section-->
         <footer>
