Added iframes to contact page styled responsively with css. Added interactive elements with javascript.

--- a/contact.html
+++ b/contact.html
@@ -29,11 +29,6 @@
             <h1>Contact Us</h1>
         </header>
 
-        <!--Contact info-->
-        <section>
-            <p>Hakusensha Co.,Ltd. Contact info would go here</p>
-        </section>
-
         <!--Contact Us section-->
         <main class="contact-container">
             <h2>Send us inquiries through this form</h2>
@@ -72,6 +67,40 @@
                 <button type="submit">Send Message</button>
             </form>
         </main>
+
+        <!--Location section-->
+        <div class="iframe-container">
+            <h1>Hakusensha offices are located here:</h1>
+
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.1808030884295!2d139.76478432563556!3d35.69716812258211!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188c1b641636f1%3A0xee182e090424be5c!2sKanda%20Awajicho%2C%20Chiyoda%20City%2C%20Tokyo%20101-0063%2C%20Japan!5e0!3m2!1sen!2suk!4v1737491803058!5m2!1sen!2suk" 
+                width="600" 
+                height="450" 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade"
+                sandbox="allow-scripts allow-same-origin allow-popups">
+                <p>Your browser does not support iframes</p>
+            </iframe>
+
+            <div class="iframe-controls">
+                <button onclick="reloadFrame()">Reload Content</button>
+                <button onclick="toggleFullscreen()">Fullscreen</button>
+            </div>
+        </div>
+
+        <script>
+            function reloadFrame() {
+                const frame = document.querySelector("iframe");
+                frame.src = frame.src;
+            }
+
+            function toggleFullscreen() {
+                const frame = document.querySelector("iframe");
+                if (frame.requestFullscreen) {
+                    frame.requestFullscreen();
+                }
+            }
+        </script>
 
         <!--Footer section-->
         <footer>
